--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
 <h1>{{ title }}</h1>
+
+<app-side-bar></app-side-bar>
+
+<app-header></app-header>
+
+<app-video-card *ngFor="let video of videos"
+[thumbnail]="video.thumbnail"
+[title]="video.title"
+[src]="video.src"
+[nbOfViews]="video.nbOfViews"
+[date]="video.date"
+[isLive]="video.isLive"
+[channel]="video.channel">
+</app-video-card>
