--- a/src/app/side-bar/side-bar.component.css
+++ b/src/app/side-bar/side-bar.component.css
@@ -1,8 +1,35 @@
-div {
+.side-bar {
     background-color: var(--dark-bg-color);
     width: 250px;
-    min-height: 100vh;
+    margin-top: -60px;
+    min-height: calc(100vh - 60px);
 }
-h2 {
-    margin: 0;
+
+img {
+    width: 5vw;
+    border-radius: 50%;
 }
+
+.channel-wrap {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+@media (max-width: 960px) { 
+    .side-bar {
+        width: 10vw;        
+    }
+    p {
+        display: none;
+    }
+ }
