--- a/src/app/video-card/video-card.component.css
+++ b/src/app/video-card/video-card.component.css
@@ -2,11 +2,19 @@ img {
     width: 100%;
 }
 
-.video-card {
-    width: 25%;
-}
-
 .channel-img {
     width: 10%;
+    margin: 8px;
     border-radius: 50%;
+}
+
+.info-wrap {
+    margin: calc(-10% - 16px) 0 0 calc(10% + 16px);
+}
+
+.live-alert {
+    background-color: brown;
+    width: fit-content;
+    padding: 0.4em;
+    border-radius: 8px;
 }
