--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header
 [types]="types"
+(onTypeChange)="onType($event)"
+(onSearchQueryChange)="onSearchQuery($event)"
 ></app-header>
 
 <div class="main">
