--- a/src/app/video-card/video-card.component.css
+++ b/src/app/video-card/video-card.component.css
@@ -1,3 +1,5 @@
+div { position: relative }
+
 img {
     width: 100%;
 }
@@ -17,4 +19,12 @@ img {
     width: fit-content;
     padding: 0.4em;
     border-radius: 8px;
+}
+
+.over-link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
