--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
             (input)="sendSearchQuery(input)"
             [(ngModel)]="input"
             type="text" placeholder="Search">
-            <button>🔎</button>
+            <button class="submit-button"><span>&#x26B2;</span></button>
         </nav>
         <nav>
             <button (click)="sendType(type)"
