--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,21 +4,18 @@
 (onSearchQueryChange)="onSearchQuery($event)"
 ></app-header>
 
-<div class="main">
+<app-side-bar class="side-bar"
+    [channels]="channels">
+</app-side-bar>
 
-    <app-side-bar class="side-bar"
-    [channels]="channels"    
-    ></app-side-bar>
-
-    <div class="videos-wrap">
-        <app-video-card class="video-wrap" *ngFor="let video of videos"
-            [thumbnail]="video.thumbnail"
-            [title]="video.title"
-            [src]="video.src"
-            [nbOfViews]="video.nbOfViews"
-            [date]="video.date"
-            [isLive]="video.isLive"
-            [channel]="video.channel">
-        </app-video-card>
-    </div>
+<div class="videos-wrap">
+    <app-video-card class="video-wrap" *ngFor="let video of videos"
+        [thumbnail]="video.thumbnail"
+        [title]="video.title"
+        [src]="video.src"
+        [nbOfViews]="video.nbOfViews"
+        [date]="video.date"
+        [isLive]="video.isLive"
+        [channel]="video.channel">
+    </app-video-card>
 </div>
