--- a/src/app/video-card/video-card.component.html
+++ b/src/app/video-card/video-card.component.html
@@ -6,9 +6,15 @@
     <img class="channel-img" [src]="channel.img" [alt]="channel.name">
     
     <div class="info-wrap">
-        <h3>{{ title }}</h3>
-        <a [href]="channel.link">{{ channel.name }}</a>
-        <p><span>{{ nbOfViews }} Views</span> . <span> There is {{ thereIs }}</span></p>
-        <div class="live-alert" *ngIf="isLive">&#x2604; Live</div>        
+        <h3>
+            {{ title }} <br>            
+            <a [href]="channel.link" class="channel-link">{{ channel.name }}</a>
+        </h3>
+        <div class="views-wrap">
+            <span>{{ nbOfViews }}&nbsp;Views
+                <span *ngIf="!isLive"> . There is {{ thereIs }}</span>
+            </span>            
+            <span *ngIf="isLive" class="live-alert">&#x2604;&nbsp;&nbsp;Live</span>
+        </div>        
     </div>
 </div>
