--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 <div>
     <div class="logo-wrap">
         <img src="assets\img\logo.png" alt="logo">
+        <a class="home-link" [routerLink]="'/'"></a>
     </div>
     <div class="nav-wrap">
         <nav>
@@ -17,3 +18,5 @@
         </nav>
     </div>
 </div>
+
+<router-outlet></router-outlet>
