--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,18 +4,11 @@
 (onSearchQueryChange)="onSearchQuery($event)"
 ></app-header>
 
-<app-side-bar class="side-bar"
-    [channels]="channels">
+<app-side-bar
+    [channels]="channels"
+    (onRouteChange)="onRoute($event)">
 </app-side-bar>
 
-<div class="videos-wrap">
-    <app-video-card class="video-wrap" *ngFor="let video of videos"
-        [thumbnail]="video.thumbnail"
-        [title]="video.title"
-        [src]="video.src"
-        [nbOfViews]="video.nbOfViews"
-        [date]="video.date"
-        [isLive]="video.isLive"
-        [channel]="video.channel">
-    </app-video-card>
-</div>
+<app-videos-section
+    [videos]="videos">
+</app-videos-section>
