--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -6,7 +6,17 @@ div {
 }
 
 .logo-wrap {
+    position: relative;
     width: 250px;
+}
+
+.home-link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9;
 }
 
 .nav-wrap {
