--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -13,7 +13,7 @@
     <h2>SUBSCRIPTIONS</h2>
     <div class="channel-wrap" *ngFor="let channel of channels">
         <img [src]="channel.img" [alt]="channel.name">
-        <a [href]="channel.link"></a>
+        <a (click)="sendChannelRoute(channel.link)" [routerLink]="'/' + channel.link"></a>
         <p>{{ channel.name }}</p>
     </div>
 </div>
