--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 [types]="types"
 (onTypeChange)="onType($event)"
 (onSearchQueryChange)="onSearchQuery($event)"
+(onHome)="onHome()"
 ></app-header>
 
 <app-side-bar
