--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,9 +1,9 @@
 <div class="side-bar">
     <ul>
-        <li>&#x2600; <span>UN</span></li>
-        <li>&#x2601; <span>MENU</span></li>
-        <li>&#x2602; <span>AU</span></li>
-        <li>&#x2603; <span>PIF</span></li>
+        <li>&#x2600; <span>THIS</span></li>
+        <li>&#x2601; <span>IS NOT</span></li>
+        <li>&#x2602; <span>A REAL</span></li>
+        <li>&#x2603; <span>MENU</span></li>
     </ul>
     <ul>
         <li>&#x260F; <span>FOO</span></li>
