another last commit ^^ fix home link

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="logo-wrap">
         <img src="assets\img\logo.png" alt="logo">
-        <a class="home-link" (click)="home()"></a>
+        <a class="home-link" (click)="home()" [routerLink]="'/'"></a>
     </div>
     <div class="nav-wrap">
         <nav>
